<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_Freq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:gravity="center|right"
            android:text="@string/tvFreq"
            />
        <Spinner
            android:id="@+id/spin_freq"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_frame_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:text="@string/tvFrameRate"
            android:layout_weight="0.31"
            />
        <Spinner
            android:id="@+id/spin_frame_rate"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_revise"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.31"
            android:gravity="center|right"
            android:text="@string/tvRevise"
            />
        <SeekBar
            android:id="@+id/sbarRevise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4096"
            android:progress="0"
            />
        <TextView
            android:id="@+id/tv_revise_Value"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:text="@string/tvReviseValue"
            android:gravity="center|right"
            android:paddingRight="10dp"
            android:textColor="@android:color/holo_blue_light"
            />
    </LinearLayout>

</LinearLayout>
